Modern IDB: Correct handling of cursors finishing iteration. https://bugs.webkit.org/show_bug.cgi?id=151664

Reviewed by Andy Estes.

Source/WebCore:

No new tests (At least one previously failing test now passes).

* Modules/indexeddb/client/IDBCursorImpl.cpp:
(WebCore::IDBClient::IDBCursor::setGetResult):

* Modules/indexeddb/client/IDBObjectStoreImpl.cpp:
(WebCore::IDBClient::IDBObjectStore::putOrAdd):

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/169782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192825 268f45cc-cd09-0410-ab3c-d52691b4dbfc